--- a/characters.html
+++ b/characters.html
@@ -10,12 +10,44 @@
         <div class="menu">
             <div class="logo">The Isle of Lost Fortune</div>
             <ul class="menu-items">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="chapter1.html">Chapter 1</a></li>
                 <li><a href="chapter2.html">Chapter 2</a></li>
                 <li><a href="chapter3.html">Chapter 3</a></li>
-                <li><a href="characters.html">Characters</a></li>
+                <li class="active"><a href="characters.html">Characters</a></li>
             </ul>
+        </div>
+        <div class="content">
+            <h1>Characters</h1>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./img/morgan.png" alt="morgan">
+                    <div class="card-content">
+                        <h2>Captain Morgan</h2>
+                        <p>Captain Morgan is a weathered and rugged figure, with salt-and-pepper hair that falls in untamed waves around his shoulders. His face bears the scars of countless battles, with a weather-beaten complexion and a steely gaze that reflects his determination and leadership.</p>
+                        <p>A patch covers one of Captain Morgan's eyes, a reminder of a past skirmish that left him scarred but undeterred. His remaining eye, a piercing shade of blue, holds a depth of knowledge and experience that belies his years. It gleams with determination and unwavering resolve, a beacon of leadership for his crewmates to follow.</p>
+                        <p>His features are weather-beaten and lined with the wrinkles of age, but they carry an air of authority and command that demands attention. A well-trimmed beard frames his jawline, its dark hue streaked with silver, while a faint scar traces a path across one cheek, a silent testament to the dangers of his chosen profession.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/blackbeard.png" alt="morgan">
+                    <div class="card-content">
+                        <h2>Black Beard's Shadow</h2>
+                        <p>Blackbeard's Shadow, the legendary pirate captain whose discovery of the Isle of Lost Fortune set the events of the story in motion, is a figure shrouded in mystery and fear. Tales of his exploits have spread far and wide, whispered in hushed tones around tavern fires and sung in the shanties of sailors who dare not speak his name aloud.</p>
+                        <p>Described as a towering figure with a presence that commands respect and strikes fear into the hearts of all who cross his path, Blackbeard's Shadow cuts an imposing figure on the decks of his ship. His frame is broad and muscular, a testament to a lifetime spent in battle and conquest, while his imposing stature seems to loom over those who dare to challenge him.</p>
+                        <p>Blackbeard's Shadow is known for his mane of dark hair, which cascades down his back like a waterfall of midnight silk. His beard, a tangled mass of wiry strands streaked with silver, billows in the wind like smoke from a raging fire, giving him an air of menace and intimidation that few can match.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./img/crew.png" alt="morgan">
+                    <div class="card-content">
+                        <h2>The Crew of the Scarlet Serpent</h2>
+                        <p>The first mate is a sturdy and seasoned sailor, with a weather-beaten complexion and a mane of salt-and-pepper hair that frames a face lined with the wrinkles of age and experience. His eyes, a piercing shade of blue, reflect the wisdom and determination that have earned him the respect of his fellow crewmates</p>
+                        <p>The navigator is a wiry figure, with a lean frame and a quick, agile demeanor that belies his years. His skin is bronzed from long hours spent beneath the sun, while his keen eyes, framed by a pair of weathered goggles, gleam with intelligence and curiosity.</p>
+                        <p>The quartermaster is a stout and muscular figure, with arms like tree trunks and a chest adorned with tattoos that tell the story of his many adventures on the high seas. His beard, a tangled mass of wiry strands streaked with salt, frames a face that bears the scars of countless battles and skirmishes.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
