--- a/index.html
+++ b/index.html
@@ -17,5 +17,21 @@
                 <li><a href="characters.html">Characters</a></li>
             </ul>
         </div>
+        <div class="content">
+            <h1>The Isle of Lost Fortune</h1>
+            <h2>Summary of the Story</h2>
+            <div>
+                <p>Welcome to the thrilling tale of the Scarlet Serpent and the Isle of Lost Fortune – a swashbuckling adventure that will transport you to a world of high seas, hidden treasures, and ancient mysteries.</p>
+                <p>In a time when the Caribbean was ruled by the daring and the reckless, a legendary pirate captain known only as Blackbeard's Shadow discovered an island that held the promise of untold riches. The Isle of Lost Fortune, shrouded in mystery and guarded by treacherous reefs, beckoned to those brave enough to seek its secrets.</p>
+                <p>Enter Captain Morgan and his loyal crew aboard the Scarlet Serpent, a ship renowned for its daring exploits and fearless captain. With rumors of the Isle of Lost Fortune spreading like wildfire, they set sail on a perilous journey across the azure expanse of the Caribbean Sea, driven by the promise of adventure and the lure of treasure beyond imagining.</p>
+            </div>
+            <h2>Gallery</h2>
+            <div class="galery">
+                <img src="./img/sea.png" alt="">
+                <img src="./img/ship.png" alt="">
+                <img src="./img/story.png" alt="">
+                <img src="./img/pirates.png" alt="">
+            </div>
+        </div>
     </body>
 </html>
